# ex_math

./: CMakeLists.txt  README.md
cmake/: Findlibnn.cmake  libmathConfig.cmake.in
include/: Icalculator.hpp  Inn_framework.hpp  ex_calculator.hpp  ex_math.hpp  nn_framework.hpp
lib/libnn/: ex_nn.hpp
src/: ex_calculator.cpp  ex_math.cpp  nn_framework.cpp
ut/: CMakeLists.txt
ut/include/: nn_framework_mock.hpp
ut/src/: ex_math_test.cpp  main.cpp
